<resources>
    <string name="app_name">Shopping Application</string>


    <string name="share_message" id="share_message">"Hey try this new Application..!!!"</string>
    <string name="share_subject" id="share_subject">"New Application I found"</string>

    <string name="main_store_welcome_text">Welcome</string>
    <string name="premium_quality">You can rest assured about the quality of our products</string>
    <string name="best_product">We have the best products in the market</string>
    <string name="free_delivery">Free home delivery on all orders</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_shoping">MainShopingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>





    <string name="my_account_update_profile_button">Update Details</string>
    <string name="my_account_change_password_button">Change Password</string>

    <string name="title_activity_main_store">MainStoreActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="price">price</string>
    <string name="offer">offer</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="firebase_items_subclass">items</string>
    <string name="firebase_itemID">itemID</string>
    <string name="firebase_seller_subclass">Seller</string>
    <string name="firebase_itemImage_subclass">items</string>
    <string name="firebase_order_subclass">Order</string>
    <string name="firebase_orderID">orderID</string>
    <string name="place_order">Place Order</string>
    <string name="back">BACK</string>


</resources>
