<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/view_item_linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/interfaceColor"
    android:padding="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/fragment_background"
        >
    <ImageView
        android:id="@+id/view_item_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/layout_padding"
        android:foregroundGravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/shopping_cart"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/layout_padding"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginEnd="@dimen/button_padding">
        <TextView
            android:id="@+id/view_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:padding="2dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/view_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/view_item_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/offer"
            />
    </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:text="@string/back"
        android:padding="@dimen/button_padding"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button_addToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:textColor="@color/white"
        android:text="ADD TO CART"
        android:padding="@dimen/button_padding"
        android:textSize="18sp"
        />
</RelativeLayout>
</LinearLayout>