<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    android:background="@color/interfaceColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fragment_background"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="@dimen/normal_text_size"
            android:padding="@dimen/button_padding"
            android:layout_marginStart="@dimen/dialog_margin"
            android:layout_marginEnd="@dimen/dialog_margin"
            android:layout_marginTop="@dimen/layout_padding"
            android:background="@drawable/button_background"
            android:layout_gravity="top"
            android:gravity="center"
        />

        <EditText
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/old_password"
            android:padding="@dimen/button_padding"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginEnd="@dimen/layout_padding"
            android:layout_marginTop="@dimen/layout_padding"
            android:background="@drawable/edit_text_background_on_white"
            android:textAlignment="center"
        />

        <EditText
            android:id="@+id/new_pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/new_password"
            android:padding="@dimen/button_padding"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginEnd="@dimen/layout_padding"
            android:layout_marginTop="@dimen/layout_padding"
            android:background="@drawable/edit_text_background_on_white"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/new_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/new_password"
            android:padding="@dimen/button_padding"
            android:layout_marginStart="@dimen/layout_padding"
            android:layout_marginEnd="@dimen/layout_padding"
            android:layout_marginTop="@dimen/layout_padding"
            android:background="@drawable/edit_text_background_on_white"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/save_button_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="@dimen/button_padding"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
        />

    </LinearLayout>

</LinearLayout>