<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    android:paddingTop="@dimen/layout_padding">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/list_item_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/fragment_background">
            <ImageView
                android:id="@+id/list_item_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/icon_padding"
                android:layout_gravity="center"
                android:src="@drawable/shopping_cart"
                android:contentDescription="image" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingStart="@dimen/layout_padding">
                <TextView
                    android:id="@+id/list_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
                <TextView
                    android:id="@+id/list_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>
                <TextView
                    android:id="@+id/list_item_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>